# cha

./: .stylish-haskell.yaml  .travis.yml  HLint.hs  LICENSE  README.md  cha.cabal
lib/: Derivation.hs  Extract.hs  Goal.hs  Interp.hs  Refiner.hs  Rules.hs  Tactic.hs  Term.hs
lib/Rules/: Base.hs  Ceq.hs  Eq.hs  General.hs  Nat.hs  Pi.hs  Sigma.hs  Uni.hs  Unit.hs  Utils.hs
src/: Main.hs
test/: Examples.hs  hlint-check.hs
