name:                cha
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/thsutton/cha#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           Copyright: (c) 2016 Thomas Sutton
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag coind
  description: Include co/inductive types
  default: False

executable cha
  hs-source-dirs:      src, lib
  main-is:             Main.hs
  other-modules:       Term, Interp
  default-language:    Haskell2010
  default-extensions:  CPP
  if flag(coind)
    cpp-options: -DFLAG_coind
  build-depends:       base >= 4.7 && < 5
                     , containers
